@@ -1,5 +1,14 @@
 2000-07-30  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
 
+	* transports/smtp/getmxrr.c:
+	    dnscache by djb produces replies which don't have NS or AD
+	    sections, and when scanning replies, we had one-off comparison
+	    error which bailed out in case the ANSWER section reached
+	    the end of the reply packet.
+
+	* man/scheduler.8:
+	    Updating on data formats and communication protocols.
+
 	* transports/libta/lockaddr.c:
 	    Be carefull as *not* to overwrite part of diagnostic
 	    data with spaces.  This has never been a bug, except
